# pbir-layout-validator

./: .gitignore  README.md  pyproject.toml  run_pbir_validator.py  run_pbir_validator_gui.py
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
pbir_validator/: __init__.py  __main__.py  analyzer.py  cli.py  conf.py  errors.py  fixer.py  learner.py  models.py  reader.py  title.py  ui.py  validator.py  writer.py
pbir_validator/gui/: __init__.py  app.py  controllers.py  editor.py  export.py  grade.py  panel.py  profiles.py  recents.py  severity.py  undo.py  watch.py  widgets.py  workers.py
pbir_validator/profiles/: __init__.py  relaxed.md  standard.md  strict.md
specs/001-pbir-layout-validator/: data-model.md  (+5 more)
tests/: _gen_benchmark.py  conftest.py  test_analyzer.py  test_analyzer_duplicate_layer.py  test_benchmark.py  test_cli_fix.py  test_cli_inprocess.py  test_cli_integration.py  test_cli_learn.py  test_cli_shared_conf.py  test_cli_validate.py  test_conf.py  test_controllers_export_zip.py  test_controllers_validate_rules_override.py  test_fixer.py  test_fixer_writes_undo_backup.py  test_grade_compute.py  test_gui_controllers_duplicates.py  test_gui_controllers_fix.py  test_gui_controllers_learn.py  test_gui_controllers_validate.py  test_gui_editor.py  test_gui_export.py  test_gui_overlaps.py  test_gui_recents.py  test_gui_severity.py  test_gui_smoke.py  test_gui_workers.py  test_hspacing_fix.py  test_hspacing_noop.py  test_learner.py  test_models.py  test_panel_extract_context.py  test_profiles_loading.py  test_reader.py  test_recents_new_keys.py  test_title.py  test_ui.py  test_ui_render.py  test_undo_record_and_restore.py  (+5 more)
(+68 files in other folders)
